<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".MainActivities.MainActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="347dp"
        android:layout_height="199dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/calorieProgressFrame"
        android:layout_width="287dp"
        android:layout_height="253dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImageView">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circularProgressIndicator"
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:max="2000"
            android:progress="0"
            app:indicatorColor="@color/calorie_green"
            app:indicatorSize="240dp"
            app:trackColor="@color/calorie_light_gray"
            app:trackThickness="30dp" />

        <TextView
            android:id="@+id/calorieSummaryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0 cal / 2000 cal"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <Button
        android:id="@+id/customizeGoalsButton"
        android:layout_width="196dp"
        android:layout_height="73dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/calorie_green"
        android:padding="16dp"
        android:text="@string/customise_goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calorieProgressFrame" />

    <Button
        android:id="@+id/addMealButton"
        android:layout_width="168dp"
        android:layout_height="72dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/red"
        android:padding="16dp"
        android:text="@string/add_meal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customizeGoalsButton" />

    <Button
        android:id="@+id/viewMealsButton"
        android:layout_width="168dp"
        android:layout_height="72dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/red"
        android:padding="16dp"
        android:text="@string/view_meals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customizeGoalsButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
